@@ -6,18 +6,19 @@ import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.commons.lang3.ArrayUtils;
+import org.apache.commons.lang3.StringUtils;
 import org.opendatadiscovery.oddplatform.annotation.BlockingTransactional;
+import org.opendatadiscovery.oddplatform.annotation.ReactiveTransactional;
 import org.opendatadiscovery.oddplatform.api.contract.model.DataEntity;
 import org.opendatadiscovery.oddplatform.api.contract.model.DataEntityClassAndTypeDictionary;
 import org.opendatadiscovery.oddplatform.api.contract.model.DataEntityDetails;
+import org.opendatadiscovery.oddplatform.api.contract.model.DataEntityGroupFormData;
 import org.opendatadiscovery.oddplatform.api.contract.model.DataEntityGroupLineageList;
 import org.opendatadiscovery.oddplatform.api.contract.model.DataEntityLineage;
 import org.opendatadiscovery.oddplatform.api.contract.model.DataEntityList;
 import org.opendatadiscovery.oddplatform.api.contract.model.DataEntityRef;
-import org.opendatadiscovery.oddplatform.api.contract.model.DataEntityTagsFormData;
 import org.opendatadiscovery.oddplatform.api.contract.model.InternalDescription;
 import org.opendatadiscovery.oddplatform.api.contract.model.InternalDescriptionFormData;
 import org.opendatadiscovery.oddplatform.api.contract.model.InternalName;
@@ -27,6 +28,7 @@ import org.opendatadiscovery.oddplatform.api.contract.model.MetadataFieldValueLi
 import org.opendatadiscovery.oddplatform.api.contract.model.MetadataFieldValueUpdateFormData;
 import org.opendatadiscovery.oddplatform.api.contract.model.MetadataObject;
 import org.opendatadiscovery.oddplatform.api.contract.model.Tag;
+import org.opendatadiscovery.oddplatform.api.contract.model.TagsFormData;
 import org.opendatadiscovery.oddplatform.auth.AuthIdentityProvider;
 import org.opendatadiscovery.oddplatform.dto.DataEntityClassDto;
 import org.opendatadiscovery.oddplatform.dto.DataEntityDetailsDto;
@@ -42,18 +44,24 @@ import org.opendatadiscovery.oddplatform.mapper.TagMapper;
 import org.opendatadiscovery.oddplatform.model.tables.pojos.DataEntityPojo;
 import org.opendatadiscovery.oddplatform.model.tables.pojos.MetadataFieldPojo;
 import org.opendatadiscovery.oddplatform.model.tables.pojos.MetadataFieldValuePojo;
-import org.opendatadiscovery.oddplatform.model.tables.pojos.TagPojo;
+import org.opendatadiscovery.oddplatform.model.tables.pojos.NamespacePojo;
 import org.opendatadiscovery.oddplatform.repository.DataEntityRepository;
 import org.opendatadiscovery.oddplatform.repository.LineageRepository;
 import org.opendatadiscovery.oddplatform.repository.MetadataFieldRepository;
 import org.opendatadiscovery.oddplatform.repository.MetadataFieldValueRepository;
-import org.opendatadiscovery.oddplatform.repository.TagRepository;
+import org.opendatadiscovery.oddplatform.repository.reactive.ReactiveDataEntityRepository;
+import org.opendatadiscovery.oddplatform.repository.reactive.ReactiveGroupEntityRelationRepository;
+import org.opendatadiscovery.oddplatform.repository.reactive.ReactiveOwnershipRepository;
+import org.opendatadiscovery.oddplatform.repository.reactive.ReactiveSearchEntrypointRepository;
+import org.opendatadiscovery.oddplatform.repository.reactive.ReactiveTermRepository;
+import org.opendatadiscovery.oddrn.Generator;
+import org.opendatadiscovery.oddrn.model.ODDPlatformDataEntityGroupPath;
 import org.springframework.stereotype.Service;
 import reactor.core.publisher.Flux;
 import reactor.core.publisher.Mono;
 
 import static java.util.function.Function.identity;
-import static java.util.function.Predicate.not;
+import static org.opendatadiscovery.oddplatform.dto.DataEntityClassDto.DATA_ENTITY_GROUP;
 import static org.opendatadiscovery.oddplatform.dto.DataEntityDimensionsDto.DataSetDetailsDto;
 
 @Service
@@ -62,38 +70,94 @@ public class DataEntityServiceImpl
     extends AbstractReadOnlyCRUDService<DataEntity, DataEntityList,
     DataEntityDimensionsDto, DataEntityMapper, DataEntityRepository>
     implements DataEntityService {
+    private final Generator oddrnGenerator = new Generator();
 
     private final AuthIdentityProvider authIdentityProvider;
-
     private final MetadataFieldValueRepository metadataFieldValueRepository;
+    private final ReactiveDataEntityRepository reactiveDataEntityRepository;
     private final MetadataFieldRepository metadataFieldRepository;
-    private final TagRepository tagRepository;
+    private final TagService tagService;
     private final LineageRepository lineageRepository;
+    private final NamespaceService namespaceService;
 
     private final MetadataFieldMapper metadataFieldMapper;
     private final MetadataFieldValueMapper metadataFieldValueMapper;
     private final TagMapper tagMapper;
+    private final ReactiveSearchEntrypointRepository reactiveSearchEntrypointRepository;
+    private final ReactiveGroupEntityRelationRepository groupEntityRelationRepository;
+    private final ReactiveTermRepository reactiveTermRepository;
+    private final ReactiveOwnershipRepository ownershipRepository;
 
     public DataEntityServiceImpl(final DataEntityMapper entityMapper,
                                  final DataEntityRepository entityRepository,
                                  final AuthIdentityProvider authIdentityProvider,
                                  final MetadataFieldValueRepository metadataFieldValueRepository,
                                  final MetadataFieldRepository metadataFieldRepository,
-                                 final TagRepository tagRepository,
+                                 final TagService tagService,
                                  final LineageRepository lineageRepository,
                                  final MetadataFieldMapper metadataFieldMapper,
                                  final MetadataFieldValueMapper metadataFieldValueMapper,
-                                 final TagMapper tagMapper) {
+                                 final ReactiveSearchEntrypointRepository reactiveSearchEntrypointRepository,
+                                 final TagMapper tagMapper,
+                                 final NamespaceService namespaceService,
+                                 final ReactiveDataEntityRepository reactiveDataEntityRepository,
+                                 final ReactiveGroupEntityRelationRepository groupEntityRelationRepository,
+                                 final ReactiveTermRepository reactiveTermRepository,
+                                 final ReactiveOwnershipRepository ownershipRepository) {
         super(entityMapper, entityRepository);
 
         this.authIdentityProvider = authIdentityProvider;
         this.metadataFieldValueRepository = metadataFieldValueRepository;
         this.metadataFieldRepository = metadataFieldRepository;
-        this.tagRepository = tagRepository;
+        this.tagService = tagService;
         this.lineageRepository = lineageRepository;
         this.metadataFieldMapper = metadataFieldMapper;
         this.metadataFieldValueMapper = metadataFieldValueMapper;
+        this.reactiveSearchEntrypointRepository = reactiveSearchEntrypointRepository;
         this.tagMapper = tagMapper;
+        this.namespaceService = namespaceService;
+        this.reactiveDataEntityRepository = reactiveDataEntityRepository;
+        this.groupEntityRelationRepository = groupEntityRelationRepository;
+        this.reactiveTermRepository = reactiveTermRepository;
+        this.ownershipRepository = ownershipRepository;
+    }
+
+    @Override
+    @ReactiveTransactional
+    public Mono<DataEntityRef> createDataEntityGroup(final DataEntityGroupFormData formData) {
+        if (StringUtils.isNotEmpty(formData.getNamespaceName())) {
+            return namespaceService.getOrCreate(formData.getNamespaceName())
+                .flatMap(namespacePojo -> createDEG(formData, namespacePojo));
+        } else {
+            return createDEG(formData, null);
+        }
+    }
+
+    @Override
+    @ReactiveTransactional
+    public Mono<DataEntityRef> updateDataEntityGroup(final Long id, final DataEntityGroupFormData formData) {
+        return reactiveDataEntityRepository.get(id)
+            .doOnNext(pojo -> log.info("I'm here"))
+            .switchIfEmpty(Mono.error(new NotFoundException("Data entity group with id %s doesn't exist", id)))
+            .filter(DataEntityPojo::getManuallyCreated)
+            .switchIfEmpty(Mono.error(new IllegalArgumentException("Can't update ingested data entity")))
+            .flatMap(pojo -> {
+                if (StringUtils.isNotEmpty(formData.getNamespaceName())) {
+                    return namespaceService.getOrCreate(formData.getNamespaceName())
+                        .flatMap(namespacePojo -> updateDEG(pojo, formData, namespacePojo));
+                } else {
+                    return updateDEG(pojo, formData, null);
+                }
+            });
+    }
+
+    @Override
+    public Mono<DataEntityPojo> deleteDataEntityGroup(final Long id) {
+        return reactiveDataEntityRepository.get(id)
+            .switchIfEmpty(Mono.error(new NotFoundException("Data entity group with id %s doesn't exist", id)))
+            .filter(DataEntityPojo::getManuallyCreated)
+            .switchIfEmpty(Mono.error(new IllegalArgumentException("Can't delete ingested data entity")))
+            .flatMap(this::deleteDEG);
     }
 
     @Override
@@ -164,6 +228,14 @@ public class DataEntityServiceImpl
     }
 
     @Override
+    public Mono<DataEntityList> listByTerm(final long termId, final String query, final Integer entityClassId,
+                                           final int page, final int size) {
+        return Mono
+            .fromCallable(() -> entityRepository.listByTerm(termId, query, entityClassId, page, size))
+            .map(entityMapper::mapPojos);
+    }
+
+    @Override
     @BlockingTransactional
     public Mono<MetadataFieldValueList> createMetadata(final long dataEntityId,
                                                        final List<MetadataObject> metadataList) {
@@ -227,54 +299,17 @@ public class DataEntityServiceImpl
     }
 
     @Override
-    // TODO: refactor
-    // TODO: fix non-transactional update of search entrypoint and Tag CRUD
-    public Flux<Tag> upsertTags(final long dataEntityId, final DataEntityTagsFormData formData) {
+    @ReactiveTransactional
+    public Flux<Tag> upsertTags(final long dataEntityId, final TagsFormData formData) {
         final Set<String> names = new HashSet<>(formData.getTagNameList());
 
-        return Mono.just(dataEntityId)
-            .map(tagRepository::listByDataEntityId)
-            .flatMapIterable(labels -> {
-                final List<TagPojo> existingTags = tagRepository.listByNames(names);
-                final List<String> existingTagsNames = existingTags.stream()
-                    .map(TagPojo::getName)
-                    .toList();
-                final Set<String> labelNames = labels.stream().map(TagPojo::getName).collect(Collectors.toSet());
-
-                final List<Long> idsToDelete = labels
-                    .stream()
-                    .filter(l -> !names.contains(l.getName()))
-                    .map(TagPojo::getId)
-                    .collect(Collectors.toList());
-
-                tagRepository.deleteRelations(dataEntityId, idsToDelete);
-
-                final List<TagPojo> tagToCreate = formData.getTagNameList()
-                    .stream()
-                    .filter(n -> !labelNames.contains(n) && !existingTagsNames.contains(n))
-                    .map(n -> new TagPojo().setName(n).setImportant(false))
-                    .collect(Collectors.toList());
-
-                final List<Long> createdIds = tagRepository
-                    .bulkCreate(tagToCreate)
-                    .stream()
-                    .map(TagPojo::getId)
-                    .toList();
-
-                final Set<Long> toRelate = Stream.concat(
-                    createdIds.stream(),
-                    existingTags.stream().map(TagPojo::getId).filter(not(idsToDelete::contains))
-                ).collect(Collectors.toSet());
-
-                tagRepository.createRelations(dataEntityId, toRelate);
-
-                entityRepository.calculateTagVectors(List.of(dataEntityId));
-
-                return Stream
-                    .concat(tagToCreate.stream(), existingTags.stream())
-                    .map(tagMapper::mapPojo)
-                    .collect(Collectors.toList());
-            });
+        return tagService.deleteRelationsWithDataEntityExcept(dataEntityId, names)
+            .then(tagService.getOrCreateTagsByName(names))
+            .flatMap(tagsToLink -> tagService.createRelationsWithDataEntity(dataEntityId, tagsToLink)
+                .ignoreElements().thenReturn(tagsToLink))
+            .flatMap(tags -> reactiveSearchEntrypointRepository.updateTagVectorsForDataEntity(dataEntityId)
+                .thenReturn(tags))
+            .flatMapIterable(tags -> tags.stream().map(tagMapper::mapToTag).toList());
     }
 
     @Override
@@ -324,5 +359,69 @@ public class DataEntityServiceImpl
                 ? Mono.error(new NotFoundException())
                 : Mono.just(optional.get()))
             .map(entityMapper::mapGroupLineageDto);
+    }
+
+    private Mono<DataEntityRef> createDEG(final DataEntityGroupFormData formData,
+                                          final NamespacePojo namespace) {
+        return Mono.just(formData)
+            .map(fd -> entityMapper.mapToPojo(fd, DATA_ENTITY_GROUP, namespace))
+            .flatMap(reactiveDataEntityRepository::create)
+            .map(pojo -> {
+                final String oddrn = generateOddrn(pojo);
+                pojo.setOddrn(oddrn);
+                return pojo;
+            })
+            .flatMap(reactiveDataEntityRepository::update)
+            .flatMap(pojo -> {
+                final List<String> entityOddrns =
+                    formData.getEntities().stream().map(DataEntityRef::getOddrn).toList();
+                return groupEntityRelationRepository.createRelations(pojo.getOddrn(), entityOddrns)
+                    .ignoreElements().thenReturn(pojo);
+            })
+            .flatMap(this::updateSearchVectors)
+            .map(entityMapper::mapRef);
+    }
+
+    private Mono<DataEntityRef> updateDEG(final DataEntityPojo pojo,
+                                          final DataEntityGroupFormData formData,
+                                          final NamespacePojo namespace) {
+        final List<String> entityOddrns =
+            formData.getEntities().stream().map(DataEntityRef::getOddrn).toList();
+        return Mono.just(formData)
+            .map(fd -> entityMapper.applyToPojo(fd, namespace, pojo))
+            .flatMap(reactiveDataEntityRepository::update)
+            .flatMap(degPojo -> groupEntityRelationRepository.deleteRelationsExcept(degPojo.getOddrn(), entityOddrns)
+                .ignoreElements().thenReturn(degPojo))
+            .flatMap(degPojo -> groupEntityRelationRepository.createRelations(degPojo.getOddrn(), entityOddrns)
+                .ignoreElements().thenReturn(degPojo))
+            .flatMap(this::updateSearchVectors)
+            .map(entityMapper::mapRef);
+    }
+
+    private Mono<DataEntityPojo> deleteDEG(final DataEntityPojo pojo) {
+        return Flux.zip(
+            reactiveTermRepository.deleteRelationsWithTerms(pojo.getId()),
+            groupEntityRelationRepository.deleteRelationsForDEG(pojo.getOddrn()),
+            tagService.deleteRelationsForDataEntity(pojo.getId()),
+            ownershipRepository.deleteByDataEntityId(pojo.getId())
+        ).then(reactiveDataEntityRepository.delete(pojo.getId()));
+    }
+
+    private String generateOddrn(final DataEntityPojo pojo) {
+        try {
+            return oddrnGenerator.generate(ODDPlatformDataEntityGroupPath.builder()
+                    .id(pojo.getId())
+                    .build(), "id");
+        } catch (Exception e) {
+            log.error("Error while generating oddrn for data entity {}", pojo.getId(), e);
+            throw new RuntimeException(e);
+        }
+    }
+
+    private Mono<DataEntityPojo> updateSearchVectors(final DataEntityPojo pojo) {
+        return Mono.zip(
+            reactiveSearchEntrypointRepository.updateDataEntityVectors(pojo.getId()),
+            reactiveSearchEntrypointRepository.updateNamespaceVectorForDataEntity(pojo.getId())
+        ).thenReturn(pojo);
     }
 }
